funcionalidad de longin para admin

--- a/src/views/login/login.html
+++ b/src/views/login/login.html
@@ -17,10 +17,10 @@
     <script src="https://www.gstatic.com/firebasejs/8.8.0/firebase-firestore.js"></script>
 
 
-    <title>Sistema de tutoría</title>
+    <title>Sistema de gestión silabus y asistencia</title>
   </head>
   <body>
-    <h2>Sistema de tutoría</h2>
+    <h2>Sistema de gestión silabus y asistencia</h2>
     <div class="container" id="container">
       <div class="form-container sign-up-container">
         <form action="#" id="formLoginDocente" class="card card-body">
@@ -73,13 +73,13 @@
           </div>
           <div class="overlay-panel overlay-right">
             <h1>Bienvenido de vuelta Docente</h1>
-                <p>Si desea ver sus datos y tutorados ingrese aqui</p>
+                <p>Si eres Docente ingresa por este medio.</p>
                 <button class="ghost" id="signUp">Ingresar</button>
           </div>
         </div>
       </div>
     </div>
-    <script src="./panel.js" charset="utf-8"></script>
+    <script src="../../database/panel.js" charset="utf-8"></script>
     <script src="../../database/login.js"></script>
   </body>
 </html>
