--- a/src/views/admin/admin.html
+++ b/src/views/admin/admin.html
@@ -42,15 +42,33 @@
 	<form>
 		<input type="button" value="Go back!" onclick="history.back()">
 	</form>
-	<form id="formCargar" class="form" role="form" autocomplete="off">
-		<div class="container">
-			<input type="file" id="inputfile">
-			<button id="btn-cargar" class="btn btn-primary p-1" type="submit">
+	<form id="formCargaAcademica" class="form" role="form" autocomplete="off">
+		<div class="container card p-3">
+			<div class="card-header p-2">
+				<h4>Subir carga academica</h4>
+			</div>
+			<div>
+				<input type="file" id="inputfile-Academica" class="p-2">
+			</div>
+			<button id="btn-cargar-cursos" class="btn btn-primary p-2" type="submit">
 				Cargar
 			</button>
 		</div>
 	</form>
-	
+	<div class="p-3"></div>
+	<form id="formCargaDocente" class="form" role="form" autocomplete="off">
+		<div class="container card p-3">
+			<div class="card-header p-2">
+				<h4>Subir carga docente</h4>
+			</div>
+			<div>
+				<input type="file" id="inputfile-Docente" class="p-2">
+			</div>
+			<button id="btn-cargar-docentes" class="btn btn-primary p-2" type="submit">
+				Cargar
+			</button>
+		</div>
+	</form>
 	<div class="container">		
 	<div class="mx-auto col-sm-9 main-section" id="myTab" role="tablist">
 		<ul class="nav nav-tabs justify-content-end">
@@ -81,9 +99,7 @@
 						<div class="table-responsive">
 							<table class="table table-bordered table-hover table-striped"" id = "titles">
 								<td>Codigo</td>
-								<td>Nombre</td>
-								<td>A.Paterno</td>
-								<td>A.Materno</td>
+								<td>Nombres</td>
 								<td>EP</td>
 								<td>Categoria</td>
 							</table>
@@ -130,28 +146,6 @@
                                         type="text"
                                         id="nombres"
                                         placeholder="Nombres"
-                                        class="form-control"
-                                        >
-								</div>
-							</div>
-							<div class="form-group row">
-								<label class="col-lg-3 col-form-label form-control-label">Apellido Paterno</label>
-								<div class="col-lg-9">
-									<input 
-                                        type="text"
-                                        id="apellido-paterno"
-                                        placeholder="Apellido Paterno"
-                                        class="form-control"
-                                        >
-								</div>
-							</div>
-							<div class="form-group row">
-								<label class="col-lg-3 col-form-label form-control-label">Apellido Materno</label>
-								<div class="col-lg-9">
-									<input 
-                                        type="text"
-                                        id="apellido-materno"
-                                        placeholder="Apellido Materno"
                                         class="form-control"
                                         >
 								</div>
