--- a/src/views/docente/docente.html
+++ b/src/views/docente/docente.html
@@ -36,34 +36,235 @@
         <link rel="stylesheet" href="https://cdn.datatables.net/1.10.19/css/dataTables.bootstrap4.min.css">
     
     </head>
-<body>
-    <div class="container">
-        <h3>BIENVENIDO DOCENTE</h3>
+    <body>
+        <div class="container">
+            <h3>BIENVENIDO DOCENTE</h3>
     
-        <form id="formCargarAlumnos" class="form" role="form" autocomplete="off">
-            <div class="container">
-                <input type="file" id="inputfile">
-                <div class="form-group row">
-                    <label class="col-lg-3 col-form-label form-control-label">Cursos</label>
-                    <div class="col-lg-9">
-                        <input type="text"
-                            name="cursos"
-                            class="form-control"
-                            list="cursos"
-                            placeholder="Cursos"
-                            multiple>
-                        <datalist id="cursos">
-                            <option value="curso 1">
-                            <option value="curso 2">
-                        </datalist>
+            <form id="formCargarAlumnos" class="form" role="form" autocomplete="off">
+                <div class="container">
+                    <input type="file" id="inputfile">
+                    <div class="form-group row">
+                        <label class="col-lg-3 col-form-label form-control-label">Cursos</label>
+                        <div class="col-lg-9">
+                            <input type="text"
+                                name="cursos"
+                                class="form-control"
+                                list="cursos"
+                                placeholder="Cursos"
+                                multiple>
+                            <datalist id="cursos">
+                                <option value="curso 1">
+                                <option value="curso 2">
+                            </datalist>
+                        </div>
                     </div>
                 </div>
-                <button id="btn-cargar" class="btn btn-primary p-1" type="submit">
-                    Cargar Alumnos
-                </button>
-            </div>
-        </form>
-    </div>
+            </form>
+                <!-- Button trigger modal -->
+            <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
+                EDITAR DOCENTE
+            </button>
+            <div class="container">		
+                <div class="mx-auto col-sm-9 main-section" id="myTab" role="tablist">
+                    <ul class="nav nav-tabs justify-content-end">
+                        <li class="nav-item">
+                        <a class="nav-link active" id="list-tab" data-toggle="tab" href="#list" role="tab" aria-controls="list" aria-selected="false">List</a>
+                        </li>
+                        <li class="nav-item">
+                        <a class="nav-link" id="form-tab" data-toggle="tab" href="#form" role="tab" aria-controls="form" aria-selected="true">Form</a>				   	
+                        </li>
+                    </ul>
+                    <div class="tab-content" id="myTabContent">
+                        <div class="tab-pane fade show active" id="list" role="tabpanel" aria-labelledby="list-tab">
+                            <div class="card">					
+                                <div class="card-header">
+                                    <h4>CURSOS</h4>
+                                    <input type="text"
+                                    id="myInput"
+                                    onkeyup="Search()"
+                                    placeholder="Codigo"
+                                    autofocus
+                                    >
+                                    <button id="btn-buscar" class="btn btn-primary p-1" type="submit">
+                                        Buscar
+                                    </button>
+                                    <ul id="alumno-buscado"></ul>
+                                </div>										
+                                <div class="card-body">
+                                    <div class="table-responsive">
+                                        <table class="table table-bordered table-hover table-striped" id = "titles">
+                                            <!-- CABESERA DE LA TABLA -->
+                                            <td>Codigo</td>
+                                            <td>carrera</td>
+                                            <td>Curso</td>
+                                            <td>Credito</td>
+                                            <!-- <td>Docente</td> -->
+                                        </table>
+                                        <table id="lista-cursos" class="table table-bordered table-hover table-striped">	
+                                        </table>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="tab-pane fade" id="form" role="tabpanel" aria-labelledby="form-tab">
+                            <div class="card">
+                                <div class="card-header">
+                                    <h4>Registrar Curso</h4>
+                                </div>
+                                <div class="card-body">
+                                    <form id="formCurso" class="form" role="form" autocomplete="off">
+                                        <div class="form-group row">
+                                            <label class="col-lg-3 col-form-label form-control-label">Codigo</label>
+                                            <div class="col-lg-9">
+                                                <input 
+                                                    type="text"
+                                                    id="CodigoCurso"
+                                                    placeholder="Codigo"
+                                                    class="form-control"
+                                                    >
+                                            </div>
+                                        </div>
+                                        <div class="form-group row">
+                                            <label class="col-lg-3 col-form-label form-control-label">Carrera</label>
+                                            <div class="col-lg-9">
+                                                <input 
+                                                    type="text"
+                                                    id="CarreraCurso"
+                                                    placeholder="Carrera"
+                                                    class="form-control"
+                                                    >
+                                            </div>
+                                        </div>
+                                        <div class="form-group row">
+                                            <label class="col-lg-3 col-form-label form-control-label">Curso</label>
+                                            <div class="col-lg-9">
+                                                <input 
+                                                    type="text"
+                                                    id="CursoCurso"
+                                                    placeholder="Curso"
+                                                    class="form-control"
+                                                    >
+                                            </div>
+                                        </div>
+                                        <div class="form-group row">
+                                            <label class="col-lg-3 col-form-label form-control-label">Credito</label>
+                                            <div class="col-lg-9">
+                                                <input 
+                                                    type="text"
+                                                    id="CreditoCurso"
+                                                    placeholder="Credito"
+                                                    class="form-control"
+                                                    >
+                                            </div>
+                                        </div>
+                                        <div class="form-group row">
+                                            <div class="col-lg-1 text left"></div>
+                                                <button id="btn-guardar" class="btn btn-primary p-1" type="submit">
+                                                    Guardar
+                                                </button>
+                                            </div>
+                                        </div>
+                                    </form>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            
     
-</body>
+        </div>
+    
+        
+        <!-- Modal -->
+        <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">EDITAR DOCENTE</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+                </div>
+    
+                <div class="modal-body">
+                    <div class="card">
+                        <div class="card-body">
+                            <form id="formDocente" class="form" role="form" autocomplete="off">
+                                <div class="form-group row">
+                                    <label class="col-lg-3 col-form-label form-control-label">Codigo</label>
+                                    <div class="col-lg-9">
+                                        <input 
+                                            type="text"
+                                            id="codigo"
+                                            placeholder="Codigo"
+                                            class="form-control"
+                                            autofocus
+                                            >
+                                    </div>
+                                </div>
+                                <div class="form-group row">
+                                    <label class="col-lg-3 col-form-label form-control-label">Contraseña</label>
+                                    <div class="col-lg-9">
+                                        <input 
+                                            type="password"
+                                            id="password"
+                                            placeholder="Contraseña"
+                                            class="form-control"
+                                            >
+                                    </div>
+                                </div>
+                                <div class="form-group row">
+                                    <label class="col-lg-3 col-form-label form-control-label">Nombres</label>
+                                    <div class="col-lg-9">
+                                        <input 
+                                            type="text"
+                                            id="nombres"
+                                            placeholder="Nombres"
+                                            class="form-control"
+                                            >
+                                    </div>
+                                </div>
+                                <div class="form-group row">
+                                    <label class="col-lg-3 col-form-label form-control-label">Escuela Profesional</label>
+                                    <div class="col-lg-9">
+                                        <input 
+                                            type="text"
+                                            id="codigo-ep"
+                                            placeholder="Codigo EP"
+                                            class="form-control"
+                                            >
+                                    </div>
+                                </div>
+                                <div class="form-group row">
+                                    <label class="col-lg-3 col-form-label form-control-label">Categoria</label>
+                                    <div class="col-lg-9">
+                                        <input type="text"
+                                            name="categoria"
+                                            class="form-control"
+                                            list="categoria"
+                                            placeholder="Categoría"
+                                            multiple>
+                                        <datalist id="categoria">
+                                            <option value="Nombrado">
+                                            <option value="Contratado">
+                                        </datalist>
+                                    </div>
+                                </div>
+                            </form>
+                        </div>
+                    </div> 
+                </div>
+                <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">CERRA</button>
+                <button type="button" class="btn btn-primary">GUARDAR</button>
+                </div>
+            </div>
+            </div>
+        </div>
+        <script src="menu.js"></script>
+        <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+        
+    </body>
 </html>
