--- a/src/views/docente/docente.html
+++ b/src/views/docente/docente.html
@@ -40,6 +40,15 @@
         <div class="container">
             <h3>BIENVENIDO DOCENTE</h3>
     
+            <!-- cerrar sesión -->
+            <form id="formCerrarSesion" class="form" role="form" autocomplete="off">
+                <div class="container card p-3">
+                    <button id="btn-cerrar-sesion" class="btn btn-primary p-2" type="submit">
+                        cerrar sesión
+                    </button>
+                </div>
+            </form>
+
             <form id="formCargarAlumnos" class="form" role="form" autocomplete="off">
                 <div class="container">
                     <input type="file" id="inputfile">
@@ -261,7 +270,7 @@
             </div>
             </div>
         </div>
-        <script src="menu.js"></script>
+        <script src="../../database/docente.js"></script>
         <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
