cambio de colores en el login

--- a/src/views/login/style.css
+++ b/src/views/login/style.css
@@ -45,8 +45,8 @@ a {
 
 button {
     border-radius: 20px;
-    border: 1px solid #FF4B2B;
-    background-color: #FF4B2B;
+    border: 1px solid #FFFFFF;
+    background-color: #ECA100;
     color: #FFFFFF;
     font-size: 12px;
     font-weight: bold;
@@ -65,7 +65,7 @@ button:focus {
 }
 
 button.ghost {
-    background-color: transparent;
+    background-color: #ECA100;
     border-color: #FFFFFF;
 }
 
@@ -162,9 +162,9 @@ input {
 }
 
 .overlay {
-    background: #FF416C;
-    background: -webkit-linear-gradient(to right, #FF4B2B, #FF416C);
-    background: linear-gradient(to right, #FF4B2B, #FF416C);
+    background: #ECA100;
+    background: -webkit-linear-gradient(to right, #032190, #4A63C1);
+    background: linear-gradient(to right, #032190, #4A63C1);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: 0 0;
