--- a/src/views/admin/SubirCarga.html
+++ b/src/views/admin/SubirCarga.html
@@ -44,7 +44,8 @@
 	<div class="container-fluid">
         <div class="row justify-content-center align-content-center">
             <div class="col-8 barra">
-                 <img src="unsaac.png" width="55" height="55" clear="left">Sistema UNSAAC
+                <img src="unsaac.png" width="55" height="55" clear="left">Sistema UNSAAC
+            </div>
             <div class="col-4 text-right barra">
                 <ul class="navbar-nav mr-auto">
                     <li>
