creación de funciones de guardar datos y orden en archivos admin

--- a/src/views/admin/admin.html
+++ b/src/views/admin/admin.html
@@ -89,6 +89,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js"></script>
     <script src="https://kit.fontawesome.com/646c794df3.js"></script>
 
-    <script type="module" src="../../database/admin.js"></script>
+    <script type="module" src="../../database/admin/admin.js"></script>
 </body>
 </html>
