--- a/src/views/docente/Cursos.html
+++ b/src/views/docente/Cursos.html
@@ -47,19 +47,7 @@
                 <h4 class="text-light"></h4>
             </div>
             <div class="col-4 text-right barra">
-                <ul class="navbar-nav mr-auto">
-                    <li>
-                        <a href="#" class="px-3 text-light perfil dropdown-toggle" id="navbarDropdown" role="button"
-                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i
-                                class="fas fa-user-circle user"></i></a>
-
-                        <div class="dropdown-menu" aria-labelledby="navbar-dropdown">
-                            <a class="dropdown-item menuperfil cerrar" href="../login/login.html"><i
-                                    class="fas fa-sign-out-alt m-1"></i>Salir
-                            </a>
-                        </div>
-                    </li>
-                </ul>
+                <a href="../login/login.html"><img src="home.png" width="8%" height="60%"></a>
             </div>
         </div>
     </div>
@@ -278,7 +266,7 @@
                                     </div>
                                     <div class="modal-footer">
                                         <button type="button" class="btn btn-secondary"
-                                            data-dismiss="modal">CERRA</button>
+                                            data-dismiss="modal">CERRAR</button>
                                         <button type="button" class="btn btn-primary">GUARDAR</button>
                                     </div>
                                 </div>
