--- a/src/views/docente/Cursos.html
+++ b/src/views/docente/Cursos.html
@@ -43,11 +43,11 @@
     <div class="container-fluid">
         <div class="row justify-content-center align-content-center">
             <div class="col-8 barra">
-                <img src="unsaac.png" width="55" height="55" clear="left">Sistema UNSAAC
-                <h4 class="text-light"></h4>
+                <a href="../login/login.html"><img src="unsaac.png" width="70" height="70" clear="left"></a>
+                <h4 class="text-light">SISTEMA UNSAAC</h4>
             </div>
             <div class="col-4 text-right barra">
-                <a href="../login/login.html"><img src="home.png" width="8%" height="60%"></a>
+                <a href="../login/login.html"><img src="home.png" width="10%" height="60%"></a>
             </div>
         </div>
     </div>
