arreglos en el padding

--- a/src/views/docente/Cursos.html
+++ b/src/views/docente/Cursos.html
@@ -86,7 +86,7 @@
                             <!-- Button trigger modal -->
                             <button type="button" class="btn btn-primary" data-toggle="modal"
                                 data-target="#exampleModal">
-                                EDITAR DOCENTE
+                                Configurar Datos
                             </button>
                             <div class="container">
                                 <div class="mx-auto col-sm-9 main-section" id="myTab" role="tablist">
