--- a/src/views/docente/Cursos.html
+++ b/src/views/docente/Cursos.html
@@ -59,8 +59,8 @@
                 <nav class="menu d-flex d-sm-block justify-content-center flex-wrap">
                     <a href="docente.html"><i class="bi bi-house"></i><span>Inicio</span></a>
                     <a href="Cursos.html"><i class="bi bi-file-earmark-text-fill"></i><span>Cursos</span></a>
-                    <a href="#"><i class="bi bi-people-fill"></i><span>Lista Estudiantes</span></a>
-                    <a href="#"><i class="bi bi-gear"></i><span>Configuracion</span></a>
+                    
+                    <a href="configuracion.html"><i class="bi bi-gear"></i><span>Configuracion</span></a>
                 </nav>
             </div>
             <main class="main col">
@@ -70,12 +70,11 @@
                             <h3>BIENVENIDO DOCENTE</h3>
                             <form id="formCargarAlumnos" class="form" role="form" autocomplete="off">
                                 <div class="container">
-                                    <input type="file" id="inputfile">
                                     <div class="form-group row">
                                         <label class="col-lg-3 col-form-label form-control-label">Cursos</label>
                                         <div class="col-lg-9">
                                             <input type="text" name="cursos" class="form-control" list="cursos"
-                                                placeholder="Cursos" multiple>
+                                                placeholder=    "Cursos" multiple>
                                             <datalist id="cursos">
                                                 <option value="curso 1">
                                                 <option value="curso 2">
@@ -85,10 +84,7 @@
                                 </div>
                             </form>
                             <!-- Button trigger modal -->
-                            <button type="button" class="btn btn-primary" data-toggle="modal"
-                                data-target="#exampleModal">
-                                Configurar Datos
-                            </button>
+                            
                             <div class="container">
                                 <div class="mx-auto col-sm-9 main-section" id="myTab" role="tablist">
                                     <ul class="nav nav-tabs justify-content-end">
@@ -190,79 +186,7 @@
                         </div>
 
 
-                        <!-- Modal -->
-                        <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog"
-                            aria-labelledby="exampleModalLabel" aria-hidden="true">
-                            <div class="modal-dialog" role="document">
-                                <div class="modal-content">
-                                    <div class="modal-header">
-                                        <h5 class="modal-title" id="exampleModalLabel">EDITAR DOCENTE</h5>
-                                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                            <span aria-hidden="true">&times;</span>
-                                        </button>
-                                    </div>
-
-                                    <div class="modal-body">
-                                        <div class="card">
-                                            <div class="card-body">
-                                                <form id="formDocente" class="form" role="form" autocomplete="off">
-                                                    <div class="form-group row">
-                                                        <label
-                                                            class="col-lg-3 col-form-label form-control-label">Codigo</label>
-                                                        <div class="col-lg-9">
-                                                            <input type="text" id="codigo" placeholder="Codigo"
-                                                                class="form-control" autofocus>
-                                                        </div>
-                                                    </div>
-                                                    <div class="form-group row">
-                                                        <label
-                                                            class="col-lg-3 col-form-label form-control-label">Contraseña</label>
-                                                        <div class="col-lg-9">
-                                                            <input type="password" id="password"
-                                                                placeholder="Contraseña" class="form-control">
-                                                        </div>
-                                                    </div>
-                                                    <div class="form-group row">
-                                                        <label
-                                                            class="col-lg-3 col-form-label form-control-label">Nombres</label>
-                                                        <div class="col-lg-9">
-                                                            <input type="text" id="nombres" placeholder="Nombres"
-                                                                class="form-control">
-                                                        </div>
-                                                    </div>
-                                                    <div class="form-group row">
-                                                        <label
-                                                            class="col-lg-3 col-form-label form-control-label">Escuela
-                                                            Profesional</label>
-                                                        <div class="col-lg-9">
-                                                            <input type="text" id="codigo-ep" placeholder="Codigo EP"
-                                                                class="form-control">
-                                                        </div>
-                                                    </div>
-                                                    <div class="form-group row">
-                                                        <label
-                                                            class="col-lg-3 col-form-label form-control-label">Categoria</label>
-                                                        <div class="col-lg-9">
-                                                            <input type="text" name="categoria" class="form-control"
-                                                                list="categoria" placeholder="Categoría" multiple>
-                                                            <datalist id="categoria">
-                                                                <option value="Nombrado">
-                                                                <option value="Contratado">
-                                                            </datalist>
-                                                        </div>
-                                                    </div>
-                                                </form>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="modal-footer">
-                                        <button type="button" class="btn btn-secondary"
-                                            data-dismiss="modal">CERRAR</button>
-                                        <button type="button" class="btn btn-primary">GUARDAR</button>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
+                        
                     </div>
                 </div>
 
