--- a/src/views/docente/docente.html
+++ b/src/views/docente/docente.html
@@ -60,8 +60,8 @@
                 <nav class="menu d-flex d-sm-block justify-content-center flex-wrap">
                     <a href="docente.html"><i class="bi bi-house"></i><span>Inicio</span></a>
                     <a href="Cursos.html"><i class="bi bi-file-earmark-text-fill"></i><span>Cursos</span></a>
-                    <a href="#"><i class="bi bi-people-fill"></i><span>Lista Estudiantes</span></a>
-                    <a href="#"><i class="bi bi-gear"></i><span>Configuracion</span></a>
+                    
+                    <a href="configuracion.html"><i class="bi bi-gear"></i><span>Configuracion</span></a>
                 </nav>
             </div>
             <main  class="main col">
