estructura guardar alumnos

--- a/src/views/docente/RegistroAsistencia.html
+++ b/src/views/docente/RegistroAsistencia.html
@@ -37,6 +37,8 @@
                   </div>
                   <div class="table-responsive">
                       <table class="table table-bordered table-hover table-striped" id = "titles">
+                          <td>Nro Orden</td>
+                          <td>Codigo Alumno Curso</td>
                           <td>Codigo</td>
                           <td>Nombre</td>
                           <td>AP</td>
