--- a/src/views/docente/RegistroAsistencia.html
+++ b/src/views/docente/RegistroAsistencia.html
@@ -36,22 +36,14 @@
                       </div>
                   </div>
                   <div class="table-responsive">
-                      <table class="table table-bordered table-hover table-striped" id = "titles">
-                          <td>Nro Orden</td>
-                          <td>Codigo Alumno Curso</td>
-                          <td>Codigo</td>
-                          <td>Nombre</td>
-                          <td>AP</td>
-                          <td>AM</td>
-                      </table>
                       <table id="prelista-alumnos" class="table table-bordered table-hover table-striped">   
                       </table>
                   </div>
-                  <button id="btn-cargar-cursos" class="btn btn-primary p-2" type="submit">
+                  <button id="btn-cargar-alumnos" class="btn btn-primary p-2" type="submit">
                       Cargar
                   </button>
               </form>
-          </div>
+            </div>
 
             <table class="table" id="tablaTitulo">
                 <thead>
